tests/rosetta/out/Java/arithmetic-complex.error
javac error: exit status 1
/tmp/TestMochiToJavaarithmetic-complex962223138/001/ArithmeticComplex.java:41: error: incompatible types: String cannot be converted to int
        int s = "(" + String.valueOf(a.re);
                    ^
/tmp/TestMochiToJavaarithmetic-complex962223138/001/ArithmeticComplex.java:43: error: incompatible types: String cannot be converted to int
            s = (int)(s + "+" + String.valueOf(a.im) + "i)");
                     ^
/tmp/TestMochiToJavaarithmetic-complex962223138/001/ArithmeticComplex.java:46: error: incompatible types: String cannot be converted to int
            s = (int)(s + String.valueOf(a.im) + "i)");
                     ^
/tmp/TestMochiToJavaarithmetic-complex962223138/001/ArithmeticComplex.java:48: error: incompatible types: int cannot be converted to String
        return s;
               ^
4 errors
